## 1.2.2 - 20191103

 * Fixed GIMP support on Linux
 * Added support for ImageMagick 7
 * Support for system theme

## 1.2.1 - 20181204

 * Fixed GIMP 2.10 Windows support
 * Fixed broken Cyan Python plug-in
 * Support XCF (GIMP image format)
 * Support reading layers from XCF, TIFF, PSD

## 1.2.0 - 20181203

 * Major "behind-the-scene" changes
 * Improved performance
 * Save to JPEG
 * Enhanced image information
 * Third-party software updates
 * Fixed issues converting HDR images

## 1.0.0 - 20160814

 * first public release